# shot-muse

./: .gitignore  ARCHITECTURE.md  DB_SCHEMA.md  README.md  Shot_Muse_PRD.md  TASKS.md  index.html  package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: app_commands.rs  inspiration_commands.rs  media_commands.rs  mod.rs  project_commands.rs  shooting_plan_commands.rs  shooting_plan_inspiration_commands.rs  tag_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/media/: file_store.rs
src-tauri/src/models/: app_status.rs  inspiration.rs  media_asset.rs  mod.rs  project.rs  shooting_plan.rs  tag.rs
src-tauri/src/repositories/: inspiration_repository.rs  media_repository.rs  mod.rs  project_repository.rs  shooting_plan_inspiration_repository.rs  shooting_plan_repository.rs  tag_repository.rs
src/app/: navigation.ts  styles.css
src/components/: ConfirmDialog.tsx
src/components/common/: PlaceholderCard.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
src/pages/: DashboardPage.tsx  InspirationLibraryPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  ShootingPlanPage.tsx  TagsPage.tsx
src/router/: router.tsx
src/services/: appApi.ts  inspirationApi.ts  mediaApi.ts  planInspirationApi.ts  projectApi.ts  shootingPlanApi.ts  tagApi.ts
